cleaning out other features and adding to the ignore